# FineTuning

./: .gitignore  README.md  bert.ipynb  future.txt  notebook.ipynb  pyproject.toml  utils.py
notebooks/: bert.ipynb  utils.py
texts/: ai.txt  ir.txt
